navbare section added

--- a/index.html
+++ b/index.html
@@ -3,18 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title> Gamer Zone</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- header section start -->
     <header>
-        <nav></nav>
+        <nav class="nav-container">
+            <div class="nav-intro">
+                <img id="nav-logo" src="./images/Frame.png" alt="">
+                <h3 class="nav-title"><span id="one-letter">G</span>amer</h3>
+            </div>
+            <ul>
+                <li class="first-two-list-item"><a href="">About Us</a></li>
+                <li class="first-two-list-item"><a href="">Developers</a></li>
+                <div id="nav-sub-section">
+                    <li><a href="">Follow Us On</a></li> 
+                    <img id="nav-icon1" src="./images/favicon.ico" alt="">
+                    <img id="nav-icon2" src="./images/favicon-32x32.png" alt="">
+                </div>
+            </ul>
+            
+        </nav>
+        <!-- navbar section end -->
     </header>
 
     <!-- main section start -->
     <main>
-
+        <!-- banner section start -->
     </main>
 
     <!-- footer section start -->
