banner section added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
     <!-- main section start -->
     <main>
         <!-- banner section start -->
+        <section class="banner-section">
+            <!-- banner content -->
+            <div class="banner-content">
+                <h3 id="banner-subtitle">Play Like The</h3>
+                <h1 id="banner-title">G.O.A.T.</h1>
+                <p class="banner-details">1-Click instant play</p>
+                <p class="banner-details">No Download</p>
+                <p class="banner-details">1000s of supported online games</p>
+                <button class="button-primary">Sign In</button>
+                <button class="button-secondary">Go Rogue</button>
+            </div>
+            <!-- banner images -->
+            <div class="banner-image-container">
+                <img class="banner-image" src="./images/Group 18.png" alt="">
+            </div>
+        </section>
+
+    <!-- online games section start -->
+        <section class="games-container">
+            <h3>Online Games <span class="highlighted-text">Funny Videos</span></h3>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="games-category">
+                <img class="card" src="./images/Rectangle 4.png" alt=""> 
+                <img class="card" src="./images/Rectangle 5.png" alt="">
+                <img class="card" src="./images/Rectangle 7.png" alt="">
+                <img class="card" src="./images/Rectangle 6.png" alt="">
+            </div>
+        </section>
     </main>
 
     <!-- footer section start -->
