online games category added

--- a/index.html
+++ b/index.html
@@ -54,14 +54,33 @@
 
     <!-- online games section start -->
         <section class="games-container">
-            <h3>Online Games <span class="highlighted-text">Funny Videos</span></h3>
-            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
-            <div class="games-category">
-                <img class="card" src="./images/Rectangle 4.png" alt=""> 
-                <img class="card" src="./images/Rectangle 5.png" alt="">
-                <img class="card" src="./images/Rectangle 7.png" alt="">
-                <img class="card" src="./images/Rectangle 6.png" alt="">
+            <h3 class="games-header">Online Games <span class="highlighted-text">Funny Videos</span></h3>
+            <p class="games-details">A Collection of Hilarious Videos to Brighten Your Day</p>
+                <div class="games-category">
+                    <img class="card" src="./images/Rectangle 4.png" alt="">
+                    <img class="card" src="./images/Rectangle 5.png" alt="">
+                    <img class="card card3" src="./images/Rectangle 7.png" alt="">
+                    <img class="card" src="./images/Rectangle 6.png" alt="">
+                </div>
+           
+              <div class="cards-description">
+                <p  class="card-title">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
+                <p  class="card-title">Did you score? #unblockedgames <br> #school</p>
+                <p  class="card-title">Breaking game records <br> like OG</p>
+                <p  class="card-title">Busted gaming on school laptop, <br> but you are still lit.</p>
+              </div>
+        </section>
+
+        <!-- play games instantly section start -->
+        <section class="games-instantly-container">
+            <div><h3 class="instantly-title">,Play Instantly
+                <br>No Downloads <br>
+                <span id="right-side-text">No Installs.</span></h3>
+            <p class="instantly-details">
+                Play games online for free without <br>.downloading Just click the Play button <br>.and play instantly in your browser
+            </p>
             </div>
+            <div><img src="./images/Rectangle 55.png" alt=""></div>
         </section>
     </main>
 
