position of image of angela has been okay

--- a/index.html
+++ b/index.html
@@ -73,15 +73,23 @@
 
         <!-- play games instantly section start -->
         <section class="games-instantly-container">
-            <div><h3 class="instantly-title">,Play Instantly
+            <div class="games-anytime">
+                <h3 class="instantly-title"><span id="one-letter">,Play Instantly</span>
                 <br>No Downloads <br>
-                <span id="right-side-text">No Installs.</span></h3>
-            <p class="instantly-details">
+                No Installs.</h3>
+                <p class="instantly-details">
                 Play games online for free without <br>.downloading Just click the Play button <br>.and play instantly in your browser
-            </p>
+                </p>
             </div>
-            <div><img src="./images/Rectangle 55.png" alt=""></div>
+            <div class="games-anytime">
+                <img id="fighter-image" src="./images/Rectangle 55.png" alt="">
+                <div  id="image-over"><img id="angela-img" src="./images/Rectangle 66.png" alt=""></div>
+            </div>
+            
         </section>
+
+        <!-- button section start -->
+        
     </main>
 
     <!-- footer section start -->
