button section and hover added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,22 @@
         </section>
 
         <!-- button section start -->
-        
+        <section id="button-container">
+            <div class="button-first-line">
+                <button class="button"><img src="./images/Rectangle 11.png" alt=""><p>Action Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 12.png" alt=""><p>Adventure Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 13.png" alt=""><p>Arcade Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 14.png" alt=""><p>Educational Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 15.png" alt=""><p>Word Games</p></button>
+            </div>
+            <div class="button-second-line">
+                <button  class="button"><img src="./images/Rectangle 16.png" alt=""><p>Role Palying Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 17.png" alt=""><p>Music & Audio Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 18.png" alt=""><p>Puzzle Games</p></button>
+                <button  class="button"><img src="./images/Rectangle 19.png" alt=""><p>Strategy Games</p></button>
+            </div>
+        </section>
+
     </main>
 
     <!-- footer section start -->
