--- a/index.html
+++ b/index.html
@@ -109,7 +109,31 @@
 
     <!-- footer section start -->
     <footer>
-
+        <div class="footer-intro">
+            <img id="footer-logo" src="./images/Frame.png" alt="">
+            <h3 class="footer-title"><span id="one-letter">G</span><span id="some-letters">amer</span></h3>
+        </div>
+        <div id="services">
+            <p>Our Story</p>
+            <p>Games</p>
+            <p>Web Games</p>
+            <p>Careers</p>
+            <p>Supports</p>
+            <p>My Account</p>
+        </div>
+        <div class="buttons">
+            <button class="footer-button"><img id="twitter" src="./images/icons/pngtree-white-twitter-icon-png-png-image_3562062.png" alt=""></button>
+            <button class="footer-button"><img id="facebook" src="./images/icons/download-fb-png.png" alt=""></button>
+            <button class="footer-button"><img id="youtube" src="./images/icons/youtube-icon-youtube-black-white-and-vector-youtube-icon-white-11553385551ianxhdyl48.png" alt=""></button>
+            <button class="footer-button"><img id="instagram" src="./images/icons/download-insta.png" alt=""></button>
+        </div>
+        <div id="footer-bottom-text">
+            <span class="bottom-text">Terms and Conditions</span>
+            <span class="bottom-text">Privacy Policy</span>
+            <span class="bottom-text">Cookie Policy</span>
+            <span class="bottom-text">Cookie Policy</span>
+        </div>
+      <small>  Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
     </footer>
 </body>
 </html>
